# Cerisano_backend

./: README.md
cerisano_backend/: db.sqlite3  pyproject.toml
cerisano_backend/core/: settings.py  urls.py
