[tool.poetry]
name = "cerisano-backend"
version = "0.1.0"
description = ""
authors = ["Giovanni Murfuni <murfunig@gmail.com>"]
readme = "README.md"
packages = [{include = "cerisano_backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10" # <-- MODIFICATO QUI!
django = "^5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
